fix infor-persional z-index

--- a/hoang/role-hoang.css
+++ b/hoang/role-hoang.css
@@ -885,6 +885,7 @@ h1.js-after {
 /* ******* info-personal ********* */
 #info-personal.show {
     display: flex;
+    z-index: 10;
 }
 
 #info-personal {
